# icebaseui

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/baseui-widget/: SKILL.md
crates/baseui/: Cargo.toml
crates/baseui-core/: Cargo.toml
crates/baseui-core/src/: color.rs  font.rs  geometry.rs  id.rs  lib.rs  paint.rs  reactive.rs
crates/baseui-lua/: Cargo.toml
crates/baseui-lua/src/: lib.rs
crates/baseui/src/: anim.rs  app.rs  bus.rs  clipboard.rs  command.rs  event.rs  focus.rs  icon.rs  layout.rs  lib.rs  persist.rs  popup.rs  text.rs  theme.rs  undo.rs  window.rs
crates/baseui/src/icon/: gis.rs  mod.rs
crates/baseui/src/render/: glyph.rs  mod.rs  quad.rs  quad.wgsl  text.rs
crates/baseui/src/widget/: button.rs  checkbox.rs  combobox.rs  dock.rs  drag_value.rs  hex_view.rs  label.rs  menu.rs  mod.rs  popup_menu.rs  property.rs  scroll.rs  slider.rs  split.rs  stack.rs  statusbar.rs  tabs.rs  textarea.rs  textbox.rs  toolbar.rs  tree.rs
docs/: docking.md  document-tabs.md  rich-text.md  scripting.md  text.md
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/dock/: Cargo.toml
examples/dock/src/: main.rs
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/inspector/: Cargo.toml
examples/inspector/plugins/: hello.lua
examples/inspector/src/: main.rs
examples/widgets/: Cargo.toml
examples/widgets/src/: main.rs
