[workspace]
resolver = "3"
members = [
    "crates/baseui-core",
    "crates/baseui",
    "examples/hello",
    "examples/counter",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iceisfun/baseui"
rust-version = "1.85"

[workspace.dependencies]
baseui-core = { path = "crates/baseui-core" }
baseui = { path = "crates/baseui" }

# Rendering / windowing backend (chosen: winit + wgpu)
winit = "0.30"
wgpu = "26"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Text rendering
ab_glyph = "0.2"
fontdb = "0.23"

# Utilities
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
