[package]
name = "baseui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency-free core primitives for the BaseUI framework: geometry, color, ids, and the reactive signal runtime."

[dependencies]

[dev-dependencies]
