[package]
name = "baseui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency-free core primitives for the BaseUI framework: geometry, color, ids, and the reactive signal runtime."

readme = "../../README.md"
keywords = ["gui", "geometry", "reactive", "color"]
categories = ["gui", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[dependencies]

[dev-dependencies]
