[package]
name = "baseui-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional Lua (mlua) scripting for BaseUI: commands, shortcuts, events, and status items — the plugin/glue layer."

[dependencies]
baseui.workspace = true
mlua = { workspace = true, features = ["lua54", "vendored", "serialize"] }
serde_json.workspace = true
log.workspace = true
