[package]
name = "baseui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A modern, extensible, reactive desktop UI framework for engineering applications, built on winit + wgpu."

[dependencies]
baseui-core.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
log.workspace = true
