[package]
name = "baseui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A modern, extensible, reactive desktop UI framework for engineering applications, built on winit + wgpu."

[features]
default = ["icons-gis"]
# Embeds the font-gis icon pack (367 GIS/spatial glyphs) as an icon font.
icons-gis = []

[dependencies]
baseui-core.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
ab_glyph.workspace = true
fontdb.workspace = true
serde.workspace = true
serde_json.workspace = true
arboard.workspace = true
log.workspace = true
